--- a/app/src/main/res/layout/item_person_events_data_cell.xml
+++ b/app/src/main/res/layout/item_person_events_data_cell.xml
@@ -45,11 +45,11 @@
         app:layout_constraintTop_toBottomOf="@+id/timeTextView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/joinButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Button"
+        android:text="参加"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contentTextView" />
