--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -27,7 +27,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/userNameEditText"
+            android:id="@+id/settingUserNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -35,6 +35,7 @@
             android:inputType="textPersonName" />
 
         <Button
+            android:id="@+id/settingChangeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="48dp"
